--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <script defer src="slide.js"></script>
     <style>
         * {
             font-family: 'Inter', 'sans-serif';
@@ -37,8 +36,8 @@
 <body>
     <nav
         class="w-full h-16 lg:h-20 shadow-md flex justify-between items-center px-4 lg:px-16 fixed top-0 left-0 right-0 z-[100] bg-white-color">
-        <img src="../assets/logo.svg" alt="logo of dekor" class="w-[100px]">
-        <img src="../assets/menu.svg" alt="menu icon" class="w-8 lg:hidden block">
+        <img src="assets/logo.svg" alt="logo of dekor" class="w-[100px]">
+        <img src="assets/menu.svg" alt="menu icon" class="w-8 lg:hidden block">
         <ul class="hidden lg:flex gap-x-12">
             <li><a href="">About us</a></li>
             <li><a href="">Furniture <i class="material-symbols-outlined align-middle">expand_more</i></a></li>
@@ -80,7 +79,7 @@
         </div>
         <div id="hero"
             class="w-full lg:w-[640px] h-[233px] md:h-[350px] lg:h-[700px] bg-no-repeat bg-cover object-fill bg-center mt-12 lg:mt-0 relative"
-            style="background-image: url('../assets/hero.svg');">
+            style="background-image: url('assets/hero.svg');">
             <div id="highlighted"
                 class="w-full h-full p-5 lg:py-24 absolute bottom-0 top-0 left-0 right-0 flex flex-col justify-between lg:justify-end">
                 <p class="text-white lg:hidden block">HIGHLIGHTED PRODUCT</p>
@@ -136,10 +135,10 @@
             <p class="">PARTNERED BRANDS</p>
         </div>
         <div class="flex justify-center items-center gap-8 lg:gap-16 mt-4 lg:mt-0 lg:ml-16">
-            <img src="../assets/partner-1.svg" alt="" class="grow h-4 md:h-8">
-            <img src="../assets/partner-2.svg" alt="" class="grow h-4 md:h-8">
-            <img src="../assets/partner-3.svg" alt="" class="grow h-4 md:h-8">
-            <img src="../assets/partner-4.svg" alt="" class="grow h-4 md:h-8">
+            <img src="assets/partner-1.svg" alt="" class="grow h-4 md:h-8">
+            <img src="assets/partner-2.svg" alt="" class="grow h-4 md:h-8">
+            <img src="assets/partner-3.svg" alt="" class="grow h-4 md:h-8">
+            <img src="assets/partner-4.svg" alt="" class="grow h-4 md:h-8">
         </div>
     </section>
 
@@ -181,11 +180,11 @@
         </div>
         <div class="flex justify-evenly mt-4 lg:gap-6">
             <div class="w-[30%] h-[132px] lg:w-[148px] lg:h-[523px] object-fill bg-no-repeat bg-center bg-cover rounded-xl"
-                style="background-image: url('../assets/category-1.svg');"></div>
+                style="background-image: url('assets/category-1.svg');"></div>
             <div class="w-[30%] h-[132px] lg:w-[148px] lg:h-[523px] object-fill bg-no-repeat bg-center bg-cover rounded-xl"
-                style="background-image: url('../assets/category-2.svg');"></div>
+                style="background-image: url('assets/category-2.svg');"></div>
             <div class="w-[30%] h-[132px] lg:w-[472px] lg:h-[523px] object-fill bg-no-repeat bg-center bg-cover rounded-xl"
-                style="background-image: url('../assets/category-3.svg');"></div>
+                style="background-image: url('assets/category-3.svg');"></div>
         </div>
     </section>
 
@@ -204,25 +203,25 @@
             <div class="mt-4 lg:mt-12 relative">
                 <div id="carosoul" class="flex gap-4 overflow-auto lg:overflow-visible lg:gap-10 px-10">
                     <div class="relative">
-                        <img src="../assets/product-1.svg" alt="" class="min-w-[192px] max-w-[270px] rounded-md">
+                        <img src="assets/product-1.svg" alt="" class="min-w-[192px] max-w-[270px] rounded-md">
                         <div class="carosoul-content p-6 absolute bottom-0 left-0">
 
                         </div>
                     </div>
                     <div class="relative">
-                        <img src="../assets/product-2.svg" alt="" class="min-w-[192px] max-w-[270px] rounded-md">
+                        <img src="assets/product-2.svg" alt="" class="min-w-[192px] max-w-[270px] rounded-md">
                         <div class="carosoul-content p-6 absolute bottom-0 left-0">
 
                         </div>
                     </div>
                     <div class="relative">
-                        <img src="../assets/product-3.svg" alt="" class="min-w-[192px] max-w-[270px] rounded-md">
+                        <img src="assets/product-3.svg" alt="" class="min-w-[192px] max-w-[270px] rounded-md">
                         <div class="carosoul-content p-6 absolute bottom-0 left-0">
 
                         </div>
                     </div>
                     <div class="relative">
-                        <img src="../assets/product-4.svg" alt="" class="min-w-[192px] max-w-[270px] rounded-md">
+                        <img src="assets/product-4.svg" alt="" class="min-w-[192px] max-w-[270px] rounded-md">
                         <div class="carosoul-content p-6 absolute bottom-0 left-0">
 
                         </div>
@@ -258,7 +257,7 @@
 
     <footer class="w-full lg:p-12 p-4 lg:flex lg:justify-between mt-20 mb-10">
         <div class="lg:w-[40%]">
-            <img src="../assets/logo.svg" alt="logo of dekor" class="w-[90px] mx-auto lg:mx-0">
+            <img src="assets/logo.svg" alt="logo of dekor" class="w-[90px] mx-auto lg:mx-0">
             <p class="text-center lg:text-left text-darkish-blue-color my-9">
                 Dekoor is a furniture company created to fulfill the needs of family with aesthetic feeling in their
                 furniture. Always pay attention to details and give clear communication for the customers. Priority of
