--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 'opsz' 48
         }
     </style>
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="dist/output.css" rel="stylesheet">
 
 <body>
     <nav
